# wingman-ai

./: .gitignore  CLAUDE.md  CODE-DISCOVERY-PATTERN.md  IMPLEMENTATION-PLAN-Presales-AI-Assistant.md  _implementation_plan_template.md  _testing_plan_template.md
docs/: CODE-PATTERNS.md  ENGINEERING-WALKTHROUGH.md  FILE-STRUCTURE-MAP.md  GETTING-STARTED.md  README.md
docs/diagrams/: ARCHITECTURE.md  SEQUENCES.md
docs/flows/: AUDIO-CAPTURE-PIPELINE.md  SESSION-START-FLOW.md  SESSION-STOP-AND-SUMMARY-FLOW.md  TRANSCRIPT-TO-SUGGESTION-FLOW.md
ideation/implementation-plans/phase_10/: IMPLEMENTATION-PLAN-OVERLAY-UNIFIED-TIMELINE.md
ideation/implementation-plans/phase_11_cross_browser_oauth/: IMPLEMENTATION-PLAN-CROSS-BROWSER-OAUTH.md
ideation/implementation-plans/phase_12_persona_storage/: IMPLEMENTATION-PLAN-PERSONA-AND-UI-REFINEMENTS.md  IMPLEMENTATION-PLAN-PERSONA-SELECTOR.md  ideation.md
ideation/implementation-plans/phase_13_overlay_persona_picker/: ideation.md
ideation/implementation-plans/phase_14_persona_testing/: test-persona.mjs
ideation/implementation-plans/phase_16_openrouter/: IMPLEMENTATION-PLAN-OPENROUTER.md  ideation.md
ideation/implementation-plans/phase_17_groq_and_model_tuning/: IMPLEMENTATION-PLAN-GROQ.md  ideation.md
ideation/implementation-plans/phase_19_hydra/: IDEATION-HYDRA.md  IMPLEMENTATION-PLAN-HYDRA.md  UI-MOCKUPS.md
ideation/implementation-plans/phase_20_code_quality_refactor/: IMPLEMENTATION-PLAN.md  JUNIOR-ENGINEER-GUIDE.md  REFACTORING-TUTORIAL.md
ideation/research/: MASTER-FEATURE-MATRIX.md  research-audio-capture-tools.md  research-google-meet-official-apis.md  research-interview-copilots-1.md  research-interview-copilots-2.md  research-meeting-platforms.md
implementation-plans/: 00-INDEX.md  01-extension-track.md  02-backend-core-track.md  03-ai-knowledge-track.md  04-integration-testing-track.md  ASSUMPTIONS-RESEARCH-SUMMARY.md
tammy-ai-technical-account-manager/: .env.example  .gitignore  README.md
tammy-ai-technical-account-manager/backend/: SYSTEM-PROMPT.md  requirements.txt
tammy-ai-technical-account-manager/extension/: LOG.md  manifest.json  package.json
wingman-ai/: .gitignore  CLAUDE.md  IMPLEMENTATION-PLAN-BYOK.md  LICENSE  README.md
wingman-ai/backend/: SYSTEM-PROMPT.md  pyproject.toml
wingman-ai/backend/app/: __init__.py  main.py
wingman-ai/backend/app/models/: __init__.py
wingman-ai/backend/app/rag/: __init__.py  cli.py  ingestion.py
wingman-ai/backend/app/routers/: __init__.py  health.py  websocket.py
wingman-ai/backend/app/services/: __init__.py  agent.py  connection_manager.py
wingman-ai/extension/: .env.example  LOG.md  manifest.json  package-lock.json  package.json  test-kb-impossible-facts.txt  test-kb-systemprompt.txt  tsconfig.json  vite.config.ts  vitest.config.ts
(+185 files in other folders)
